# angular8bazel

./: BUILD.bazel  README.md  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json  tslint.json
e2e/: BUILD.bazel  protractor.on-prepare.js
e2e/src/: app.e2e-spec.ts
src/: BUILD.bazel  index.html
src/app/: BUILD.bazel  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/shared/column/: BUILD.bazel  column.component.html  column.component.scss  column.component.ts  column.module.ts
src/app/shared/responsive/: BUILD.bazel  model.ts  platform.ts  responsive.service.mock.ts  responsive.service.spec.ts  responsive.service.ts  window-resize.service.mock.ts  window-resize.service.ts
