load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_karma//:index.bzl", "ts_web_test_suite")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "app-styles",
    src = "app.component.scss",
)

ng_module(
    name = "app",
    srcs = glob(["*.ts"], exclude=["*.spec.ts"]),
    assets = ["app.component.html", ":app-styles"],
    deps = [
        "//src/app/shared/column",
        "//src/app/shared/responsive",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["*.spec.ts"]),
    deps = [
        ":app",
        "//src/app/shared/column",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@types",
    ],
)

ts_web_test_suite(
    name = "test",
    srcs = [
        "@npm//:node_modules/tslib/tslib.js",
    ],
    # do not sort
    bootstrap = [
        "@npm//:node_modules/zone.js/dist/zone-testing-bundle.js",
        "@npm//:node_modules/reflect-metadata/Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        "@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    tags = ["native"],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
        "@npm//karma-jasmine",
    ],
)
